# VALayr

./: .commit_msg.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  foundry.toml  orchestrator.py  pyproject.toml  requirements.txt  subnet_adapter  task_generator
.github/: dependabot.yml
.github/workflows/: ci.yml
contracts/script/: Deploy.s.sol
contracts/src/: CommitReveal.sol  ExploitRegistry.sol  Ownable2Step.sol  Pausable.sol  ProtocolRegistry.sol  Treasury.sol
contracts/test/: AdversarialMode.t.sol  CommitReveal.t.sol  ExploitRegistry.t.sol  Invariant.t.sol  Ownable2Step.t.sol  Pausable.t.sol  ProtocolRegistry.t.sol  ReentrancyGuard.t.sol  Treasury.t.sol
deployments/: deploy_local_20260303_061132.json
docker/: Dockerfile.miner  Dockerfile.validator  alertmanager.yml  alerts.yml  docker-compose.yml  entrypoint.sh  grafana-dashboard.json  prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRACT_REFERENCE.md  DATA_SCHEMA.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EXPLOIT_WRITING_GUIDE.md  GLOSSARY.md  MINER_GUIDE.md  TESTING.md  THREAT_MODEL.md  VALIDATOR_GUIDE.md
docs/runbooks/: backup-recovery.md  consensus-failure.md  epoch-stall.md  incident-response.md  key-rotation.md  key-vault.md  mainnet-deploy.md  treasury.md  validator-drift.md  validator-recovery.md
exploits/: README.md
exploits/access_selfdestruct/: Exploit.sol  README.md
exploits/auth_bypass_missing/: Exploit.sol  README.md
exploits/flash_loan_oracle/: Exploit.sol  README.md
exploits/multi_tx_governance/: Exploit.sol  README.md
exploits/multi_tx_oracle/: Exploit.sol  README.md
exploits/multi_tx_timelock/: Exploit.sol  README.md
exploits/overflow_unchecked/: Exploit.sol  README.md
exploits/reentrancy_basic/: Exploit.sol  README.md
exploits/upgradeable_vault/: Exploit.sol  README.md
miner/: cli.py
neurons/: __init__.py  miner.py  protocol.py  validator.py
scripts/: backup.sh  build.sh  deploy.sh  health-check.sh  restore.sh  rollback.sh  transfer-ownership.sh  verify-determinism.sh
subnet-adapter/: incentive.py
task-generator/: discovery.py  generate.py  mainnet.py
task-generator/mutator/: __init__.py  balance.py  base.py  controlflow.py  deadcode.py  interface.py  registry.py  rename.py  storage.py
task-generator/templates/: access_selfdestruct.sol  access_unprotected_setter.sol  auth_bypass_initializer.sol  auth_bypass_missing_modifier.sol  auth_bypass_tx_origin.sol  create2_frontrun.sol  erc20_approve_race.sol  flash_loan_price_manipulation.sol  overflow_casting.sol  overflow_unchecked.sol  reentrancy_basic.sol  reentrancy_cross_function.sol  reentrancy_erc721.sol  signature_replay.sol  storage_collision_delegatecall.sol  storage_collision_proxy.sol
tests/: _debug_anvil.py  conftest.py  test_adversarial.py  test_bounty.py  test_consensus_edge.py  test_difficulty_discovery.py  test_e2e_pipeline.py  test_extended.py  test_fingerprint_recovery.py  test_integration.py  test_key_rotation.py  test_live_anvil.py  test_logging_utils.py  test_mainnet_source.py  test_multi_tx.py  test_mutator_extended.py  test_orchestrator_integration.py  test_pipeline.py  test_protocol_roundtrip.py  test_reward_split.py  test_round2.py  test_schemas_hashing.py  test_security.py  test_uniqueness.py  test_validate_engine_unit.py  test_validator_neuron.py
validator/: commit_reveal.py  metrics.py
validator/anticollusion/: __main__.py  consensus.py
validator/bounty/: __init__.py  anti_bypass.py  identity.py  platform.py  reward_split.py
validator/engine/: adversarial.py  validate.py
validator/fingerprint/: dedup.py
(+19 files in other folders)
